--- a/styles/input.sass
+++ b/styles/input.sass
@@ -15,6 +15,10 @@ h1
   font-size: 2.5em
   text-align: center
 
+h2
+  font: 100% $font-stack
+  font-size: 2.0em
+
 nav
   clear: both
   height: 60px
@@ -38,12 +42,16 @@ p
 .col-left
   width: 40%
   display: table-cell
-  background-color: pink
+  background-color: #8044bb
+  border: 20px solid $background-color
+  /* background-color: pink */
 
 .col-right
   width: 40%
   display: table-cell
-  background-color: blue
+  background-color: #44bb44
+  border: 20px solid $background-color
+  /* background-color: blue */
 
 .row
   width: 100%
@@ -51,13 +59,14 @@ p
   display: table-row
 
 .story
-  width: 40%
+  width: 60%
   padding: 20px
   margin-left: auto
-  background-color: #8044bb
+  margin-right: auto
+
 
 .resources
-  width: 40%
+  width: 60%
   padding: 20px
+  margin-left: auto
   margin-right: auto
-  background-color: #44bb44
