Update content and styles

--- a/styles/output.css
+++ b/styles/output.css
@@ -14,6 +14,10 @@ h2 {
   font: 100% "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 2em; }
 
+li {
+  padding: 5px;
+  list-style-type: none; }
+
 nav {
   clear: both;
   height: 60px;
@@ -56,7 +60,8 @@ p {
   width: 60%;
   padding: 20px;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  /* border-left: 5px solid #ff0000 */ }
 
 .resources {
   width: 60%;
