--- a/styles/input.sass
+++ b/styles/input.sass
@@ -19,6 +19,10 @@ h2
   font: 100% $font-stack
   font-size: 2.0em
 
+li
+  padding: 5px
+  list-style-type: none
+
 nav
   clear: both
   height: 60px
@@ -63,6 +67,7 @@ p
   padding: 20px
   margin-left: auto
   margin-right: auto
+  /* border-left: 5px solid #ff0000 */
 
 .resources
   width: 60%
